--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
 #Mon Oct 13 10:38:48 UTC 2025
 description=Gradle Conventions Examples.
-group=se.fk.gradle.examples
-version=1.7.1
+group=se.fk.rimfrost.api.arbetsgivare
+version=1.0.0
